# pytrarr

./: LICENSE  README.md  TODO.md  pyproject.toml
pytrarr/: app.py  main.py  modules.py  router.py  templates.py  test.py
pytrarr/api/: api.py
pytrarr/app/: index.html  main.py
pytrarr/database/: database.db  db.py  test.py
pytrarr/models/: db.py  models.py
pytrarr/modules/: widgets.py
pytrarr/scrappers/: search.py  utils.py
pytrarr/utils/: dataclass.py  utils.py
