[tool.poetry]
name = "pytrarr"
version = "0.1.0"
description = "Torrent web laucher"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.3.13"
httpx = "<0.25.0"
justwatch = "^0.5.1"
parsel = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
