[tool.poetry]
name = "pytrarr"
version = "0.1.0"
description = "Torrent web laucher"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.3.13"
fastapi = "^0.103.1"
httpx = "<0.25.0"
parsel = "^1.8.1"
justwatch = "^0.5.1"
cloudscraper = "^1.2.71"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.2"
rich = "^13.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
